# Plover_Mejiro

./: README.md  setup.cfg  setup.py
Mejiro/: system.py
Mejiro/dictionaries/: Mejiro_Commands.json  Mejiro_Kana.py  Mejiro_Kana_No_Exceptions.py  Mejiro_Romaji.py  Mejiro_Romaji_ No_Exceptions.py  Mejiro_User.json  Mejiro_Verbs.py
Mejiro/dictionaries/Defaults/: Mejiro_Kana.py  Mejiro_Romaji.py  Mejiro_User.py
Mejiro/dictionaries/No_Exceptions/: Mejiro_Kana.py  Mejiro_Romaji.py  Mejiro_Users.json
Sokutaipu_EX/: system.py
Sokutaipu_EX/dictionaries/: Abbreviation_Sokutaipu_EX.py  Sokutaipu_EX_Commands.json  Sokutaipu_EX_Kana.py  Sokutaipu_EX_User.json  Sokutaipu_EX_Verbs.py  Sokutaipu_EX_kana.py  Sokutaipu_EX_romaji.py  abbreviation_for_Sokutaipu_EX.json  commands_for_Sokutaipu_EX.json
plover_Sokutaipu_EX/: system.py
plover_Sokutaipu_EX/dictionaries/: Plover_Sokutaipu_EV.py  Plover_Sokutaipu_EV_kana.py  Plover_Sokutaipu_EV_romaji.py  Plover_Sokutaipu_EX.py  Plover_Sokutaipu_EX_kana.py  Plover_Sokutaipu_EX_romaji.py  abbreviation_for_Sokutaipu_EX.json  commands_for_Sokutaipu_EX.json
plover_japanese_Sokki/: system.py
plover_japanese_Sokki/dictionaries/: Plover_Japanese_Sokki.py  Plover_Japanese_Sokki_Roma.py  Plover_Japanese_Sokki_kana.py  abbreviation_for_Sokki.json  commands_for_Sokki.json
